# grpc_web_example

./: .dockerignore  .drone.yml  .gitignore  Cargo.toml  README.md  buf.yaml  docker-compose.yml
back_end_server/: Cargo.toml  build.rs
back_end_server/src/: main.rs
docker/: Dockerfile.back_end  Dockerfile.envoy_proxy  Dockerfile.front_end
envoy/: envoy.yaml
front_end_app/: .eslintignore  README.md  package-lock.json  package.json  tsconfig.json
front_end_app/public/: index.html
front_end_app/src/: App.vue
front_end_app/tests/unit/: example.spec.ts
front_end_server/: Cargo.toml
front_end_server/src/: main.rs
proto/hello/v1/: hello.proto
proto/output/: README.md
