[package]
name = "back_end_server"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3.1"
prost = "0.6.1"
tokio = { version = "0.2.22", features = ["macros", "sync", "stream", "time"] }

# [build-dependencies]
# tonic-build = "0.3.1"

[build-dependencies.tonic-build]
version = "0.3.1"
default-features = false
features = ["transport", "prost"]
