[package]
name = "back_end_server"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4.3"
prost = "0.7.0"
tokio = { version = "1.7.1", features = ["macros", "sync", "rt-multi-thread", "time"] }

# [build-dependencies]
# tonic-build = "0.3.1"

[build-dependencies.tonic-build]
version = "0.4.2"
default-features = false
features = ["transport", "prost"]
