[package]
name = "front_end_server"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.1.0", default-features = false, features = [ "compress" ] }
actix-files = "0.4.0"
env_logger = "0.7.1"
